--- a/extension/chrome/src/manifest.json
+++ b/extension/chrome/src/manifest.json
@@ -1,8 +1,8 @@
 {
 	"manifest_version": 2,
-	"name": "Bitbucket Server Extension",
-	"description": "Allow to add group of reviewers for pull request in bitbucket server + other features",
-	"version": "2.2.15",
+	"name": "Bitbucket Server Extension Button Reviewers",
+	"description": "Allow to add group of reviewers for pull request in bitbucket server",
+	"version": "0.0.1",
 	"permissions": [
 		"storage",
 		"alarms",
@@ -36,7 +36,7 @@
 		"persistent": false
 	},
 	"web_accessible_resources": [
-		"js/stash_page.js",
+		"js/bitbucket_page.js",
 		"js/stash_detector.js",
 		"css/page_injection.css",
 		"js/default.json",
